# aiqs-agent

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  analyze_capsule.py  pyproject.toml  requirements-ad2.txt  sep_check.py
.github/workflows/: ci.yml
configs/: default.yaml  free_vlm_roster.example.yaml  patchcore_ad2.yaml
docs/: ARCHITECTURE.md  EXPERIMENTS.md  PHASE0_REPORT.md
results/: decisions.csv  metrics.csv
results/runs/efficient_ad-small_mvtec-screw_20260622T055657Z/: breakeven.csv  config.yaml  decision_scores.csv  image_scores.csv  risk_coverage.csv  summary.md
results/runs/patchcore-wide_resnet50_2_mvtec-capsule_20260623T140858Z/: decision_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_mvtec-capsule_20260623T141717Z/: config.yaml  summary.md
results/runs/patchcore-wide_resnet50_2_mvtec-capsule_20260623T142659Z/: breakeven.csv  config.yaml  decision_scores.csv  image_scores.csv  risk_coverage.csv  summary.md
results/runs/patchcore-wide_resnet50_2_mvtec-screw_20260622T130823Z/: breakeven.csv  config.yaml  decision_scores.csv  image_scores.csv  risk_coverage.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-candle_20260702T005429Z/: image_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260702T010548Z/: image_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260702T170356Z/: mock_vlm_crop_results.csv  mock_vlm_crop_summary.md  risk_coverage.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260705T174102Z/: image_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260705T175134Z/: breakeven.csv  config.yaml  decision_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260705T180205Z/: config.yaml  summary.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260705T181237Z/: summary.md  vlm_crop_checkpoint__claude-haiku-4-5.jsonl  vlm_crop_results__claude-haiku-4-5.csv  vlm_crop_summary__claude-haiku-4-5.md
results/runs/patchcore-wide_resnet50_2_visa-capsules_20260706T051813Z/: blind_read.csv  blind_read_key.csv  model_tier_report.md  summary.md  vlm_crop_checkpoint.jsonl  vlm_crop_results.csv
results/runs/patchcore-wide_resnet50_2_visa-macaroni1_20260702T013722Z/: config.yaml  image_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-macaroni2_20260702T020900Z/: config.yaml  image_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-pcb1_20260702T024050Z/: config.yaml  image_scores.csv  summary.md
results/runs/patchcore-wide_resnet50_2_visa-pcb2_20260702T031400Z/: config.yaml  image_scores.csv  summary.md
results/synthetic_validation/: breakeven.csv  decision_scores.csv  risk_coverage.csv  summary.md
scripts/: demo_requests.sh  make_blind_read.py  run_ad2_gpu.py  verify_vlm_local.py
src/aiqs/: __init__.py  _anomalib_compat.py  _data_v2.py  _detector_v2.py  config.py  crop.py  data.py  decide.py  detector.py  evaluate.py  model_tier_report.py  prepare_data.py  simulate_decision.py  train.py  vlm_crop.py  vlm_decide.py
src/aiqs/api/: artifact.py  main.py  schemas.py
src/aiqs/eval/: __init__.py  crop_eval.py  decision.py  metrics.py  results.py  vlm_eval.py
src/aiqs/graph/: build.py  cli.py  nodes.py  state.py
src/aiqs/vlm/: __init__.py  abstain.py  adjudicate.py  backend.py  backend_openai_compatible.py  crop_fn.py  image_encode.py  model_guard.py  prompt.py  reasoning_rules.py  state.py  substrate.py
tests/: conftest.py  test_api.py  test_crop.py  test_crop_experiment.py  test_decision.py  test_evaluate_load.py  test_graph.py  test_graph_parity.py  test_model_tier_report.py  test_openai_compatible_backend.py  test_serve_integration.py  test_vlm.py
