[project]
name = "aiqs"
version = "0.1.0"
description = "AIQS-Agent — agentic adjudication layer for industrial visual quality inspection (Phase 0: detection baseline)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Detector stack. Pinned to the anomalib 1.2 line because this is an Intel
    # (x86_64) macOS host: official PyTorch macOS wheels stop at torch 2.2.2, and
    # anomalib 2.x requires a newer torch with no x86_64-macOS wheel. AUPIMO is
    # available since anomalib 1.1, so this pin keeps every Phase-0 metric.
    # Upgrade path (see CLAUDE.md): on an arm64/CUDA host, move to anomalib 2.x.
    # [vlm] is needed even though Phase 0 uses no VLM: anomalib 1.2.0 eagerly
    # imports ALL models in anomalib.models.__init__, including VlmAd, whose
    # backends import openai/ollama/transformers/python-dotenv at module load.
    "anomalib[core,vlm]==1.2.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy<2",          # torch 2.2.2 was built against the NumPy 1.x ABI
    # anomalib 1.2.0 (Nov 2024) leaves these unbounded, so a bare resolve grabs
    # 2026-era majors (lightning 2.6, torchmetrics 1.9, pandas 3.0) that break its
    # APIs at runtime. Cap them to the contemporaneous line.
    "lightning>=2.2,<2.5",
    "torchmetrics>=1.3,<1.5",
    # Used by the eval/results backbone (kept explicit rather than relying on
    # anomalib's transitive deps).
    "pandas>=2.0,<2.3",
    # anomalib 1.2.0's visualization callback calls matplotlib's tostring_rgb(),
    # removed in matplotlib 3.10. Cap to the contemporaneous line.
    "matplotlib>=3.7,<3.10",
    "pyyaml>=6.0",
    "scikit-learn>=1.3,<1.5",
    "ollama>=0.3,<0.4",
    "requests>=2.28",
    "huggingface-hub>=0.20",
]

[project.scripts]
aiqs-prepare-data = "aiqs.prepare_data:main"
aiqs-train = "aiqs.train:main"
aiqs-eval = "aiqs.evaluate:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
